<resources>
    <string name="app_name">RSwitch Green Chips</string>
    <string name="login">Login</string>
    <string name="username">Enter your username </string>
    <string name="password">Enter your password</string>
    <string name="light1">1</string>
    <string name="light2">2</string>
    <string name="fan">Fan</string>
    <string name="title_activity_main">RSwitch Green Chips</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="logintitle">Login</string>
    <string name="prompt_account">Account</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to login -->
    <string name="ipsettingtitle">IP list</string>

    <!-- Strings related to IP setting -->
    <string name="fail_load">IP config load failed</string>
    <string name="success_load">IP config load successful</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
        <!--about dialog-->
        <string name="OK">OK</string>
        <string name="Cancel">Cancel</string>
        <string name="inValid">Please enter a VALID address</string>
        <string name="title">Add a address to connect</string>

    <!-- NavigationView Menu options -->
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
</resources>
