<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.RSwitch.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageButton
        android:id="@+id/light1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:background="@layout/light1_press"
        android:text="@string/light1"
        app:layout_constraintBottom_toTopOf="@+id/fan_switch"
        app:layout_constraintEnd_toStartOf="@+id/light2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/light2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"

        android:layout_toRightOf="@id/light1"
        android:background="@layout/light2_press"
        android:text="@string/light2"
        app:layout_constraintBottom_toTopOf="@+id/fan_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/light1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fan_switch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/light1"
        android:layout_alignLeft="@+id/light1"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"

        android:background="@layout/fan_switch_press"
        android:text="@string/fan"
        app:layout_constraintBottom_toTopOf="@+id/ip_setting"
        app:layout_constraintEnd_toStartOf="@+id/fan_speed"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light1" />

    <ImageButton
        android:id="@+id/fan_speed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/light2"
        android:layout_alignLeft="@+id/light2"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"

        android:layout_toRightOf="@id/fan_switch"
        android:background="@layout/fan_speed_press"
        android:text="@string/fan"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fan_switch"
        app:layout_constraintTop_toBottomOf="@+id/light2" />

    <ImageButton
        android:id="@+id/ip_setting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/fan_switch"
        android:layout_alignLeft="@+id/light1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"

        android:background="@layout/id_setting_press"
        android:text="@string/fan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fan_switch" />

    <ImageButton
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/fan_speed"
        android:layout_alignLeft="@+id/light2"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        android:layout_toRightOf="@+id/ip_setting"
        android:background="@layout/login_press"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ip_setting"
        app:layout_constraintTop_toBottomOf="@+id/fan_speed" />

</android.support.constraint.ConstraintLayout>
